# python-veolia-api

./: .pre-commit-config.yaml  .pylintrc  .python-version  README.md  mypy.ini  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: github-labeler.yml  main.yaml  release.yml
pyolia/: client.py  exceptions.py  veolia_websites.py
pyolia/clients/: eau_services_client.py
