[tool.poetry]
name = "pyolia"
version = "0.4.0"
description = "Async Python wrapper to interact with internal Veolia API"
authors = ["Thibaut Etienne"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tetienne/python-veolia-api/"
repository = "https://github.com/tetienne/python-veolia-api/"
packages = [
    { include = "pyolia" }
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
aiohttp = ">=3.8.1"
backoff = "^2.2.1"

[tool.poetry.dev-dependencies]
tox = "^4.3.4"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pre-commit = "^3.5.0"
black = "^22.12.0"
pylint = "^3.0.3"
isort = "^5.11.4"
mypy = "^1.5"
flake8 = "^6.0.0"
pyupgrade = "^3.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
